# ai-exp-kaban

./: .dockerignore  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: AGENTS.md  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  board_models.py  database.py  main.py
backend/app/static/: index.html
backend/tests/: test_board.py  test_main.py
docs/: DATABASE_SCHEMA.md  PLAN.md  board.example.json
frontend/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AuthenticatedApp.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
