[project]
name = "project-management-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.2",
]

[dependency-groups]
dev = [
    "httpx2==2.5.0",
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
